# push-notify

./: LICENSE  README.md
PushNotifications/GCM/: Constants.hs  Send.hs  Types.hs
push-notifications/Gcm/: ApiKey.hs~  Constants.hs  Example.hs~  GCMService.hs  GCMService.hs~  Send.hs  Types.hs  Types.hs~
push-notifications/gcm/: gcm.cabal
push-notifications/gcm/Gcm/: ApiKey.hs~  Constants.hs~  Gcm.cabal~  Send.hs  Send.hs~  Types.hs
push-notifications/gcm/test/: Example.hs~  main.hi  main.hs  main.hs~
push-notify/: push-notify.cabal
push-notify-ccs/: push-notify-ccs.cabal
push-notify-ccs/Network/PushNotify/: Ccs.hs
push-notify-ccs/Network/PushNotify/Ccs/: Constants.hs  Send.hs  Types.hs
push-notify-ccs/test/: example.hs  exampleCCS.hs
push-notify-general/: LICENSE  push-notify-general.cabal
push-notify-general/Network/PushNotify/: General.hs  PushService.hs
push-notify-general/Network/PushNotify/General/: Send.hs  Types.hs  YesodPushApp.hs  YesodPushAppRoutes.hs
push-notify-general/test/: yesodAppEcho.hs  yesodAppWithMessages.hs
push-notify-general/test/Yesod-App/: yesodAppEcho.hs  yesodAppWithMessages.hs
push-notify-general/test/Yesod-App/static/: GSoC-Example.apk
push-notify/Network/PushNotify/: Apns.hs  Gcm.hs  General.hs  Mpns.hs  PushService.hs  PushService.hs~  YesodPushApp.hs  YesodPushApp.hs~  YesodPushAppRoutes.hs
push-notify/Network/PushNotify/Apns/: Constants.hs  Constants.hs~  README.md  Send'.hs~  Send.hs  Send.hs~  Types.hs  Types.hs~  example.hs~  example2.hs~
push-notify/Network/PushNotify/Ccs/: Constants.hs  Send.hs  SendPythonExample  Types.hs  example.hs
push-notify/Network/PushNotify/Gcm/: Constants.hs  Constants.hs~  README.md  Send.hs  Send.hs~  Types.hs  Types.hs~
push-notify/Network/PushNotify/Mpns/: Constants.hs  Constants.hs~  README.md  Send.hs  Send.hs~  Types.hs  Types.hs~
push-notify/PushNotify/Gcm/: Constants.hs  Send.hs  Types.hs
push-notify/gcm/Gcm/: Constants.hs  Send.hs  Types.hs
push-notify/test/: README.md  Readme  main.hs
push-notify/test/Android-App/GSoC-Example/: .project  AndroidManifest.xml
push-notify/test/Android-App/GSoC-Example/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
push-notify/test/Android-App/GSoC-Example/res/layout/: activity_main.xml  activity_register.xml
push-notify/test/Android-App/GSoC-Example/res/menu/: activity_main.xml
push-notify/test/Android-App/GSoC-Example/res/values/: strings.xml  strings_activity_register.xml
push-notify/test/Android-App/GSoC-Example/src/com/example/gsoc_example/: CommonUtilities.java  CommonUtilities.java~  GcmBroadcastReceiver.java  MainActivity.java  Register.java  ServerUtilities.java
push-notify/test/SimpleSample/: main.hs
push-notify/test/WindowsPhone-App/: example2.hs
push-notify/test/WindowsPhone-App/GSoC-Example/GSoC-Example/: App.xaml  GSoC-Example.csproj  LocalizedStrings.cs  MainPage.xaml  MainPage.xaml.cs
push-notify/test/WindowsPhone-App/GSoC-Example/GSoC-Example/Properties/: WMAppManifest.xml
push-notify/test/WindowsPhone-App/GSoC-Example/GSoC-Example/Resources/: AppResources.resx
push-notify/test/Yesod-App/: Base.hs  Extra.hs  General.hs  PushNotify.hs  yesodApp.hs  yesodAppEcho.hs  yesodAppWithMessages.hs
push-notify/test/Yesod-App/static/: GSoC-Example.apk
push-notify/test/testAPNS/: README.md
push-notify/test/testAPNS/My-server/: example.hs  exampleAPNS.hs  private-key.pem  public-cert.pem
push-notify/test/testAPNS/Server-simulate-APN/: LICENCE  README  README.md  server.js  server1.js  server_cert.pem  server_key.pem
push-notify/test/testApn/My-server/: Constants.hs  Types.hs  example.hs  example.hs~  exampleWithOpenSSL.hs  private-key.pem
push-notify/test/testApn/Server-simulate-APN/: README  certrequest.csr  server.js  server_key.pem
push-notify/test/testGCM/: exampleGCM.hs  exampleGCM.hs~
push-notify/test/testMPNS/: example.hs  exampleMPNS.hs
push-notify/test/testPushService/: PushService.hs  YesodPushApp.hs
test/BackAndForth Messaging/: README.md
test/BackAndForth Messaging/Android-App/GSoC-Example-BackAndForth/: .project  AndroidManifest.xml
test/BackAndForth Messaging/Android-App/GSoC-Example-BackAndForth/res/layout/: activity_main.xml
test/BackAndForth Messaging/Android-App/GSoC-Example-BackAndForth/res/menu/: activity_main.xml
test/BackAndForth Messaging/Android-App/GSoC-Example-BackAndForth/res/values/: strings.xml  strings_activity_register.xml  styles.xml
test/BackAndForth Messaging/Android-App/GSoC-Example-BackAndForth/res/xml/: preferences.xml
test/BackAndForth Messaging/WindowsPhone-App/GSoC-Example/: GSoC-Example.sln
test/BackAndForth Messaging/WindowsPhone-App/GSoC-Example/GSoC-Example/: App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  Register.xaml  Register.xaml.cs
test/BackAndForth Messaging/WindowsPhone-App/GSoC-Example/GSoC-Example/Assets/: Thumbs.db
test/BackAndForth Messaging/WindowsPhone-App/GSoC-Example/GSoC-Example/Properties/: AssemblyInfo.cs  WMAppManifest.xml
test/BackAndForth Messaging/WindowsPhone-App/GSoC-Example/GSoC-Example/Resources/: AppResources.Designer.cs
test/BackAndForth Messaging/Yesod-App/: yesodAppEcho.hs  yesodAppWithMessages.hs
test/Connect4/: README.md
test/Connect4/Android-App/.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  (+1 more)
test/Connect4/Android-App/GSoC-Example-Connect4/: .classpath  .project  AndroidManifest.xml
test/Connect4/Fp Project/: DataBase.hs  Extra.hs  Handlers.hs  Main.hs
test/Connect4/Fp Project/PushNotify/: Gcm.hs  General.hs  Mpns.hs
test/Connect4/Fp Project/PushNotify/Gcm/: Constants.hs  Send.hs  Types.hs
test/Connect4/Fp Project/PushNotify/General/: Send.hs  Types.hs  YesodPushApp.hs  YesodPushAppRoutes.hs
test/Connect4/Fp Project/PushNotify/Mpns/: Constants.hs  Send.hs  Types.hs
test/Connect4/Yesod-App/: CommDevices.hs  CommWebUsers.hs  Connect4.hs  DataBase.hs  Extra.hs  Handlers.hs  Import.hs  Main.hs  yesodAppConnect4.hs
test/Connect4/Yesod-App/templates/: Home.hamlet  Home.julius  Home.lucius  SelectUser.hamlet  base.cassius  base.hamlet
(+83 files in other folders)
