name:                push-notify-ccs
version:             0.1.0.0
synopsis:            A server-side library for sending push notifications through CCS (Google Cloud Messaging).

homepage:            https://github.com/MarcosPividori/GSoC-Communicating-with-mobile-devices/tree/master/push-notify-ccs
license:             MIT
license-file:        LICENSE
author:              Marcos Pividori
maintainer:          marcos.pividori@gmail.com

category:            Network
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:   Network.PushNotify.Ccs.Send,
                     Network.PushNotify.Ccs.Constants,
                     Network.PushNotify.Ccs.Types
  
  build-depends:     base ==4.5.*,
                     push-notify ==0.1.*,
                     async ==2.0.*,
                     stm ==2.3.*,
                     aeson ==0.6.*,
                     data-default ==0.5.*,
                     text ==0.11.*,
                     xml-types ==0.3.*,
                     attoparsec ==0.10.*,
                     unordered-containers ==0.2.*,
                     bytestring ==0.9.*,
                     network ==2.4.*,
                     pontarius-xmpp ==0.2.*,
                     tls ==1.1.*,
                     tls-extra ==0.6.*,
                     crypto-random-api ==0.2.*,
                     hslogger ==1.2.*
