name:                push-notify-ccs
version:             0.1.0.0
synopsis:            A server-side library for sending/receiving push notifications through CCS (Google Cloud Messaging).
description:         This library offers a simple abstraction for sending/receiving notifications through CCS (XMPP - Google Cloud Messaging)
                     .
                     For more information and test examples: <http://gsoc2013cwithmobiledevices.blogspot.com.ar/>
                     .
                     GitHub repository: <https://github.com/MarcosPividori/GSoC-Communicating-with-mobile-devices>
homepage:            http://gsoc2013cwithmobiledevices.blogspot.com.ar/
license:             MIT
license-file:        LICENSE
author:              Marcos Pividori, mentored by Michael Snoyman.
maintainer:          Marcos Pividori <marcos.pividori@gmail.com>

category:            Network, Cloud, Mobile
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:   Network.PushNotify.Ccs

  other-modules:     Network.PushNotify.Ccs.Constants
                   , Network.PushNotify.Ccs.Types
                   , Network.PushNotify.Ccs.Send

  build-depends:     base                 >=4.5  && < 5
                   , aeson                >=0.6
                   , async                >=2.0
                   , attoparsec           >=0.10
                   , bytestring           >=0.9
                   , cprng-aes            >=0.5.2
                   , crypto-random        >=0.0.7
                   , data-default         >=0.5
                   , hslogger             >=1.2
                   , mtl                  >=2.1
                   , network              >=2.4
                   , pontarius-xmpp       >=0.3
                   , push-notify          >=0.1
                   , retry                >=0.3
                   , stm                  >=2.3
                   , text                 >=0.11
                   , tls                  >=1.1.5
                   , tls-extra            >=0.6.5
                   , unordered-containers >=0.2
                   , xml-types            >=0.3

source-repository head
  type:     git
  location: https://github.com/MarcosPividori/GSoC-Communicating-with-mobile-devices.git
