name:                push-notify
version:             0.1.0.0
synopsis:            A server-side library for sending push notifications.
-- description:         
homepage:            https://github.com/MarcosPividori/GSoC-Communicating-with-mobile-devices/tree/master/push-notify
license:             MIT
license-file:        LICENSE
author:              Marcos Pividori
maintainer:          marcos.pividori@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Network.PushNotify.Gcm.Send, Network.PushNotify.Gcm.Constants, Network.PushNotify.Gcm.Types, Network.PushNotify.Apns.Send, Network.PushNotify.Apns.Constants, Network.PushNotify.Apns.Types, Network.PushNotify.Mpns.Send, Network.PushNotify.Mpns.Constants, Network.PushNotify.Mpns.Types, Network.PushNotify.General
  -- other-modules:       
  build-depends:       base ==4.5.*, aeson ==0.6.*, conduit ==1.0.*, attoparsec-conduit ==1.0.*, containers ==0.4.*, text ==0.11.*, bytestring ==0.9.*, transformers ==0.3.*, monad-control ==0.3.*, resourcet ==0.4.*, retry ==0.2.*, http-types ==0.8.*, http-conduit ==1.9.*, data-default ==0.5.*, mtl ==2.1.*, async ==2.0.*, stm ==2.3.*, certificate ==1.3.*, convertible ==1.0.*, cereal ==0.3.*, time ==1.4.*, base16-bytestring ==0.1.*, cprng-aes ==0.3.*, network ==2.3.*, tls ==1.1.*, tls-extra ==0.6.*, unordered-containers ==0.2.*, xml-conduit ==1.1.*
