name:                push-notify
version:             0.1.0.0
synopsis:            A server-side library for sending push notifications.
description:         This library offers a simple abstraction for sending notifications through APNS, GCM and MPNS.
                     .
                     For more information and test examples: <http://gsoc2013cwithmobiledevices.blogspot.com.ar/>
                     .
                     GitHub repository: <https://github.com/MarcosPividori/GSoC-Communicating-with-mobile-devices>
homepage:            http://gsoc2013cwithmobiledevices.blogspot.com.ar/
license:             MIT
license-file:        LICENSE
author:              Marcos Pividori, mentored by Michael Snoyman.
maintainer:          Marcos Pividori <marcos.pividori@gmail.com>

category:            Network, Cloud, Mobile
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:   Network.PushNotify.Gcm
                   , Network.PushNotify.Gcm.Types
                   , Network.PushNotify.Apns
                   , Network.PushNotify.Mpns

  other-modules:     Network.PushNotify.Gcm.Constants
                   , Network.PushNotify.Gcm.Send
                   , Network.PushNotify.Apns.Constants
                   , Network.PushNotify.Apns.Send
                   , Network.PushNotify.Apns.Types
                   , Network.PushNotify.Mpns.Constants
                   , Network.PushNotify.Mpns.Send
                   , Network.PushNotify.Mpns.Types

  build-depends:     base                 >=4.5  && <5
                   , aeson                >=0.6
                   , async                >=2.0
                   , attoparsec-conduit   >=1.0
                   , base16-bytestring    >=0.1
                   , bytestring           >=0.9
                   , cereal               >=0.3
                   , certificate          >=1.3
                   , conduit              >=1.0
                   , containers           >=0.4
                   , convertible          >=1.0
                   , cprng-aes            >=0.3
                   , data-default         >=0.5
                   , http-conduit         >=1.9
                   , http-types           >=0.8
                   , monad-control        >=0.3
                   , mtl                  >=2.1
                   , network              >=2.4
                   , resourcet            >=0.4
                   , retry                >=0.3
                   , stm                  >=2.3
                   , text                 >=0.11
                   , time                 >=1.4
                   , tls                  >=1.1
                   , tls-extra            >=0.6
                   , transformers         >=0.3
                   , unordered-containers >=0.2
                   , xml-conduit          >=1.1

source-repository head
  type:     git
  location: https://github.com/MarcosPividori/GSoC-Communicating-with-mobile-devices.git
